# DalkiranTekell-POS_APP

./: .env.example  .gitignore  AKTIVASYON-TEST.bat  API-DOCS.md  BAŞLAT.bat  KAPAT.bat  KODLARI-OLUSTUR.bat  KURULUM-ADIMLARI.txt  NASIL-KULLANILIR.txt  README.md  SETUP.md  USB-YE-ATILACAKLAR.txt  start.bat
central-backend/: .env.example  .gitignore  KODLAR_OLUSTUR.js  NASIL-KULLANILIR.txt  create_final_codes.js  package.json  seed.js  tsconfig.json
central-backend/public/: index.html
central-backend/public/assets/: index-BbICZ-Pd.css  index-DXV8hqRS.js
central-backend/src/: app.controller.ts  app.module.ts  main.ts
central-backend/src/database/: database.module.ts
central-backend/src/entities/: audit-log.entity.ts  category.entity.ts  device.entity.ts  index.ts  payment.entity.ts  price-history.entity.ts  product.entity.ts  refund.entity.ts  sale-item.entity.ts  sale.entity.ts  shift.entity.ts  stock-adjustment.entity.ts  stock.entity.ts  store.entity.ts  user.entity.ts
local-pos/: package.json
local-pos/src/: App.svelte
local-pos/src/stores/: appStore.js
src/: App.svelte  App.svelte.backup
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/activation/: Activation.svelte
src/components/admin/: Settings.svelte  UserManagement.svelte
src/components/refund/: RefundScreen.svelte
src/components/reports/: ReportsViewer.svelte
src/components/sales/: SalesScreen.svelte
src/components/stock/: StockAdjustment.svelte
src/lib/api/: client.js
src/lib/db/: database-backup.js  database-simple.js  database.js  (+1 more)
(+60 files in other folders)
